2019-05-31  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <focusable_label>s from the theme file.

2019-05-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Use the singleton template to cache appearance objects, to avoid
	undefined behavior during the global destruction phase.

2019-05-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <canvas>es from the theme file.

	* Create <label>s from the theme file.

	* Specify tooltips in the theme file, for supported elements.

0.23

2019-05-18  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement API for creating appearance objects from XML theme
	files.

0.22

2019-04-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement an API for XML-based theme files.

	* element_impl.C (elementObj::implObj::scroll_by_parent_container):
	Fix scrolling performance bugs.


2019-04-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* grid_element.C: Use themedim_elementObj for holding individual
	grid cells paddings. This throws an exception immediately if a
	non-existent theme padding value was set.

	* main_window_handler.C: fix handling of edge case when an error
	creates a main window with no size.

0.21

2019-04-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* font and color picker: implement save() and restore().

	* editor_impl.C rewrap_due_to_updated_position: fix scrolling
	of centered input fields.

2019-04-08  Sam Varshavchik  <mrsam@courier-mta.com>

	* No longer necessary to explicitly save() adjustable table column
	widths, so that they can be restored() the next time. They'll get
	save()d automatically.

	* Save and restore pane container sizes.

	* Make saving and restoring of dialog positions consistent with
	main windows' by renaming screen_position() to restore().

0.20

2019-03-31  Sam Varshavchik  <mrsam@courier-mta.com>

	* Completed the refactoring of default theme loading into
	appearance objects.

2019-03-30  Sam Varshavchik  <mrsam@courier-mta.com>
