@@ -17,14 +17,10 @@ color_picker_appearance_properties::color_picker_appearance_properties()
 	  height{"color_picker_current_height"},
 	  attached_popup_appearance{const_element_popup_appearance::base
 				    ::theme()},
-	  strip_width{"color_picker_strip_width"},
-	  strip_height{"color_picker_strip_height"},
 	  picker_width{"color_picker_square_width"},
 	  picker_height{"color_picker_square_height"},
 	  basic_color_width{"color_picker_basic_color_width"},
 	  basic_color_height{"color_picker_basic_color_height"},
-	  h_button_appearance{normal_button().appearance},
-	  v_button_appearance{normal_button().appearance},
 	  basic_colors_button_appearance{normal_button().appearance},
 	  r_appearance{input_field_appearance::base::theme()},
 	  g_appearance{input_field_appearance::base::theme()},
