@@ -21,11 +21,13 @@
 #include "x/w/scrollbar.H"
 #include "x/w/theme_text.H"
 #include "x/w/tooltip.H"
+#include "x/w/button.H"
 #include "theme_parser_lock.H"
 #include "messages.H"
 #include "picture.H"
 #include <x/functionalrefptr.H>
 #include <x/visitor.H>
+#include <algorithm>
 
 LIBCXXW_NAMESPACE_START
 
@@ -1561,6 +1563,21 @@ void uicompiler::create_container(const bookpagefactory &f,
 
 #include "uicompiler.inc.C"
 
+factory_generator uicompiler::factory_parseconfig(const theme_parser_lock &lock,
+						  const char *element,
+						  const char *parent)
+{
+	auto element_lock=lock->clone();
+	element_lock->get_xpath(element)->to_node();
+
+	return [generators=factory_parseconfig(element_lock)]
+		(const factory &f, uielements &elements)
+	       {
+		       for (const auto &generator:*generators)
+			       generator(f, elements);
+	       };
+}
+
 // Additional helpers used by appearance_parser
 
 color_arg uicompiler::to_color_arg(const theme_parser_lock &lock,
@@ -1637,15 +1654,75 @@ text_color_arg uicompiler::to_text_color_arg(const color_arg &color,
 			}}, color);
 }
 
-text_param uicompiler::to_text_param(const theme_parser_lock &lock,
-				     const char *element,
-				     const char *parent)
+text_param uicompiler::text_param_value(const theme_parser_lock &lock,
+					const char *element,
+					const char *parent)
 {
 	text_param t;
 
 	t(theme_text{single_value(lock, element, parent), generators});
 
 	return t;
+}
+
+shortcut uicompiler::shortcut_value(const theme_parser_lock &lock,
+				    const char *element,
+				    const char *parent)
+{
+	// Parse it as a text_param, in order to get ${context:id} for
+	// free.
+
+	text_param t;
+
+	t(theme_text{optional_value(lock, element, parent), generators});
+
+	// But make sure we won't parse fonts, or such...
+	if (t.undecorated())
+	{
+		if (t.string.empty())
+			return shortcut{};
+
+		// t.string is unicode. Figure out which constructor of
+		// shortcut we should use.
+
+		if (t.string.size() == 1)
+			return shortcut(t.string[0]);
+
+		size_t after_dash=t.string.find_last_of('-')+1;
+
+		if (t.string.size()-after_dash == 1)
+		{
+			// "Ctrl-Shift-X", for example.
+
+			auto b=t.string.begin();
+			auto e=t.string.begin()+after_dash;
+
+			if (std::find_if(b, e,
+					 []
+					 (auto c)
+					 {
+						 return c < 0 || c >= 0x80;
+					 }) == e)
+			{
+				return shortcut{std::string{b, e}, *e};
+			}
+		}
+
+		auto b=t.string.begin();
+		auto e=t.string.end();
+
+		if (std::find_if(b, e,
+				 []
+				 (auto c)
+				 {
+					 return c < 0 || c >= 0x80;
+				 }) == e)
+		{
+			return shortcut{std::string{b, e}};
+		}
+	}
+
+	return shortcut("-"); // Throws an exception.
 }
 
 scrollbar_visibility
