@@ -193,6 +193,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_dim</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -218,6 +219,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_dim</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -243,6 +245,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_dim</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -268,6 +271,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_dim</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -290,6 +294,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_border</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -310,6 +315,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_border</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -556,6 +562,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_color</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -655,6 +662,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_dim</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -675,6 +683,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_dim</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -695,6 +704,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_dim</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -715,6 +725,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_dim</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -735,6 +746,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_dim</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -783,6 +795,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_border</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -803,6 +816,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_border</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -823,6 +837,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_border</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -843,6 +858,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_border</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -863,6 +879,7 @@ List of values:
 	<type>single_value</type>
 	<lookup>
 	  <function>generators-&gt;lookup_border</function>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -907,7 +924,7 @@ List of values:
       <object>generic_factory</object>
 
       <parameter>
-	<type>compiler.to_text_param</type>
+	<type>compiler.text_param_value</type>
 	<name>label</name>
       </parameter>
 
@@ -944,7 +961,7 @@ List of values:
       <object>generic_factory</object>
 
       <parameter>
-	<type>compiler.to_text_param</type>
+	<type>compiler.text_param_value</type>
 	<name>focusable_label</name>
       </parameter>
 
@@ -971,6 +988,7 @@ List of values:
 	  <type>single_value</type>
 	  <lookup>
 	    <function>lookup_appearance&lt;const_focus_border_appearance&gt;</function>
+	    <default_params />
 	  </lookup>
 	</member>
       </parameter>
@@ -1001,6 +1019,7 @@ List of values:
 	  <type>single_value</type>
 	  <lookup>
 	    <function>generators-&gt;lookup_color</function>
+	    <default_params />
 	  </lookup>
 	</member>
 
@@ -1010,6 +1029,7 @@ List of values:
 	  <type>single_value</type>
 	  <lookup>
 	    <function>generators-&gt;lookup_dim</function>
+	    <default_params />
 	  </lookup>
 	</member>
 
@@ -1019,6 +1039,7 @@ List of values:
 	  <type>single_value</type>
 	  <lookup>
 	    <function>generators-&gt;lookup_dim</function>
+	    <default_params />
 	  </lookup>
 	</member>
 
@@ -1028,6 +1049,7 @@ List of values:
 	  <type>single_value</type>
 	  <lookup>
 	    <function>generators-&gt;lookup_dim</function>
+	    <default_params />
 	  </lookup>
 	</member>
 
@@ -1037,6 +1059,7 @@ List of values:
 	  <type>single_value</type>
 	  <lookup>
 	    <function>generators-&gt;lookup_dim</function>
+	    <default_params />
 	  </lookup>
 	</member>
 
@@ -1046,6 +1069,7 @@ List of values:
 	  <type>single_value</type>
 	  <lookup>
 	    <function>generators-&gt;lookup_dim</function>
+	    <default_params />
 	  </lookup>
 	</member>
 
@@ -1055,6 +1079,7 @@ List of values:
 	  <type>single_value</type>
 	  <lookup>
 	    <function>generators-&gt;lookup_dim</function>
+	    <default_params />
 	  </lookup>
 	</member>
 
@@ -1064,6 +1089,7 @@ List of values:
 	  <type>single_value</type>
 	  <lookup>
 	    <function>generators-&gt;lookup_dim</function>
+	    <default_params />
 	  </lookup>
 	</member>
 
@@ -1073,8 +1099,58 @@ List of values:
 	  <type>single_value</type>
 	  <lookup>
 	    <function>generators-&gt;lookup_dim</function>
+	    <default_params />
 	  </lookup>
 	</member>
+      </parameter>
+    </function>
+
+    <!-- button -->
+
+    <function>
+      <name>element</name>
+      <new_element>1</new_element>
+
+      <condition>
+	<exists>button</exists>
+      </condition>
+
+      <invoke>create_button</invoke>
+
+      <object>generic_factory</object>
+
+      <parameter>
+	<name>button</name>
+	<type>compiler.factory_parseconfig</type>
+	<factory_wrapper>generic_factory</factory_wrapper>
+      </parameter>
+
+      <!--
+	  The button_config and shortcut go into optional_args, use
+	  use uniform initialization syntax, { config, shorcut }
+      -->
+
+      <parameter>
+	<before-passing-parameter>{</before-passing-parameter>
+	<name>config</name>
+	<member_name>config</member_name>
+	<object>button_config</object>
+
+	<member>
+	  <name>appearance</name>
+	  <field>appearance</field>
+	  <type>single_value</type>
+	  <lookup>
+	    <modify />
+	    <function>get_appearance_base</function>
+	  </lookup>
+	</member>
+      </parameter>
+
+      <parameter>
+	<name>shortcut</name>
+	<type>compiler.shortcut_value</type>
+	<after-passing-parameter>}</after-passing-parameter>
       </parameter>
     </function>
 
@@ -1125,6 +1201,7 @@ List of values:
 	  <function>lookup_container_generators</function>
 	  <parameter>lock</parameter>
 	  <parameter>single_value(lock, "name", "container")</parameter>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
@@ -1292,6 +1369,7 @@ List of values:
 	  <function>lookup_container_generators</function>
 	  <parameter>lock</parameter>
 	  <parameter>single_value(lock, "name", "container")</parameter>
+	  <default_params />
 	</lookup>
       </parameter>
     </function>
